--- a/.htaccess
+++ b/.htaccess
@@ -28,3 +28,6 @@
 		Header append Cache-Control "private, must-revalidate"
 	</filesMatch>
 </ifModule>
+
+php_flag  display_errors        on
+php_value error_reporting       2039
